[package]
name = "tower_type_steer"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/krtab/tower_type_steer"
license = "MIT"
authors = ["Arthur Carcano"]
description = "Steer (aka route, aka dispatch) request to service based on their types."


[dependencies]
futures-util = "0.3.30"
serde = { version = "1.0.210", default-features = false, optional = true }
serde_json = { version = "1.0.128", default-features = false, optional = true }
tower-layer = "0.3.3"
tower-service = "0.3.3"

[features]
default = ["json"]
json = ["serde_json", "serde"]
serde = ["dep:serde"]
serde_json = ["dep:serde_json", "serde_json/alloc"]

[dev-dependencies]
futures = { version = "0.3.30", default-features = false, features = ["executor"] }
serde = { version = "1.0.210", features = ["derive"] }
tower = { version = "0.5.1", features = ["util"] }


